--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,14 +1,19 @@
 .nav {
-  grid-area: n;
-  background-color: hotpink;
-  padding: 20px;
+  line-height: 2;
+  font-weight: 600;
+  height: 170px;
+}
+
+.links {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .item a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
 .item a.active {
-  color: gold;
+  color: #f6851e;
 }
