--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -4,3 +4,14 @@
 .posts {
   margin-top: 20px;
 }
+
+.textarea {
+  width: 100%;
+  height: 40px;
+  resize: none;
+}
+
+.addPost {
+  display: block;
+  margin-left: auto;
+}
