--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,3 +8,14 @@
   margin-left: 10px;
   width: 60px;
 }
+
+.loginBlock {
+  padding: 20px;
+  float: right;
+}
+
+.loginBlock a {
+  font-weight: 500;
+  color: black;
+  text-decoration: none;
+}
