--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -18,11 +18,13 @@
 
 .description {
   padding-left: 20px;
+  width: 61%;
   display: inline-block;
   vertical-align: top;
 }
 
 .fullName {
+  margin-bottom: 10px;
   color: #612f00;
   font-size: 28px;
   font-family: Arial, Helvetica, sans-serif;
@@ -51,4 +53,15 @@
 .value {
   display: inline-block;
   width: 215px;
+  cursor: pointer;
+}
+
+.statusBlock {
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid gray;
+}
+
+.input {
+  outline: none;
 }
