--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -62,3 +62,18 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+
+.friendButton button {
+  padding: 10px;
+  margin-top: 20px;
+  float: right;
+  border: none;
+}
+
+.allUsersButton {
+  background-color: #ffc085;
+}
+
+.showFriends {
+  background-color: rgb(116, 190, 116);
+}
