--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,6 +10,10 @@
   padding-left: 20px;
 }
 
+.item:hover {
+  background-color: rgb(241, 241, 241);
+}
+
 .item a {
   color: black;
   text-decoration: none;
