--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,18 +1,20 @@
-.postBlock {
+.form {
+  display: flex;
 }
 
 .posts {
   margin-top: 20px;
 }
 
-.textarea {
-  width: 100%;
-  height: 40px;
-  resize: none;
-  outline: none;
-}
-
 .addPost {
   display: block;
-  margin-left: auto;
+  background-color: #ffc085;
+  border: 1px solid #ffc085;
+  padding: 7px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.addPost:hover {
+  color: #f6851e;
+  background-color: white;
 }
