--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,3 +1,10 @@
+.user {
+  display: block;
+}
+.user:hover {
+  background-color: rgb(241, 241, 241);
+}
+
 .avatar {
   width: 60px;
 }
@@ -29,30 +36,28 @@ a {
   font-size: 14px;
 }
 
-.follow {
-  background-color: rgb(116, 190, 116);
-}
-
-.unfollow {
-  background-color: #ffc085;
-}
-
-.button {
-  border: none;
-  padding: 5px;
-}
-
 .friendButton button {
   padding: 10px;
   margin-top: 20px;
   float: right;
-  border: none;
 }
 
 .allUsersButton {
+  cursor: pointer;
   background-color: #ffc085;
+  border: 1px solid #ffc085;
+}
+.allUsersButton:hover {
+  color: #f6851e;
+  background-color: white;
 }
 
 .showFriends {
+  cursor: pointer;
   background-color: rgb(116, 190, 116);
+  border: 1px solid rgb(116, 190, 116);
+}
+.showFriends:hover {
+  color: rgb(116, 190, 116);
+  background-color: white;
 }
