--- a/src/components/common/FormsControls/Textarea.module.css
+++ b/src/components/common/FormsControls/Textarea.module.css
@@ -1,7 +1,10 @@
 .block {
-  display: block;
+  display: flex;
+  width: 100%;
 }
 
 .field {
-  width: 100%;
+  width: 98%;
+  height: 40px;
+  resize: none;
 }
