--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -84,7 +84,7 @@
 
 .sendButton {
   display: block;
-  padding: 10px;
+  padding: 14px 10px;
   background-color: #ffc085;
   border: 1px solid #ffc085;
   cursor: pointer;
