--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -18,7 +18,6 @@
 .friendName {
   padding-left: 5px;
   display: inline-block;
-  vertical-align: 80%;
 }
 
 .dialog span {
@@ -109,6 +108,9 @@
 }
 
 .sidebarFriend {
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
   transition: background-color 0.2s;
 }
 
