--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -12,6 +12,9 @@ a {
 }
 
 .sidebarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
   font-size: 14px;
   transition: background-color 0.2s;
 }
@@ -21,8 +24,6 @@ a {
 
 .friendName {
   padding-left: 5px;
-  display: inline-block;
-  vertical-align: 80%;
 }
 
 .heading {
