--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,5 +1,5 @@
 .user {
-  display: block;
+  display: flex;
   overflow: hidden;
 }
 
@@ -16,7 +16,9 @@ a {
 }
 
 .leftBlock {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 80px;
 }
 
